@@ -209,7 +209,7 @@
                     <plugin>
                         <groupId>org.apache.maven.plugins</groupId>
                         <artifactId>maven-compiler-plugin</artifactId>
-                        <version>3.8.0</version>
+                        <version>3.14.0</version>
                         <configuration>
         					<!--<release>${targetJdk.short}</release>-->
                             <fork>false</fork>
@@ -379,7 +379,8 @@
 					<testFailureIgnore>false</testFailureIgnore>
 					<useSystemClassLoader>false</useSystemClassLoader>
 					<forkCount>1</forkCount>
-					<reuseForks>true</reuseForks>
+					<reuseForks>true</reuseForks>					
+					<argLine>--add-opens=java.base/java.lang=ALL-UNNAMED --add-opens=java.base/java.util=ALL-UNNAMED --add-modules java.sql</argLine>
 				</configuration>
 			</plugin>
 			<plugin>
